# DRC

./: .coveragerc  .gitignore  .pylintrc  .ruff.toml  README.md  pyproject.toml  test.csv
demo/: demo.csv
drc/: __init__.py  cli.py  create_testdata.py  drc.py  parse.py  plot.py  test.py
drc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/drc/: __init__.py  cli.py  drc.py  parse.py  plot.py
tests/: __init__.py  test.py
tests/demo/: demo_params.csv
